crates/unleash-api-client-macros/tests/ui/fail/same_name.stderr
error: duplicate feature name: `a`
  --> tests/ui/fail/same_name.rs:11:20
   |
11 |     #[feature_name("a")]
   |                    ^^^
